Color contrast issue solved.

--- a/wdn/templates_4.0/less/layouts/noscript.less
+++ b/wdn/templates_4.0/less/layouts/noscript.less
@@ -3,8 +3,8 @@
     top: 0;
     left: 0;
     background-color: @warning;
-    color: #ffffff;
-    text-shadow: 1px 0 darken(@warning, 15%);
+    color: #000000;
+    text-shadow: 0 -1px lighten(@warning, 20%);
     .sans-serif-font();
     width: 100%;
     text-align: center;
